[gd_scene load_steps=4 format=3 uid="uid://dq4dr3oe20mb8"]

[ext_resource type="Script" path="res://src/ui-components/player-list/player_list.gd" id="1"]
[ext_resource type="Theme" uid="uid://pt1hrfiuwfpg" path="res://theme.tres" id="2"]
[ext_resource type="PackedScene" uid="uid://bmsr4wbngmfmw" path="res://src/ui-components/player-list/table/player_tabel.tscn" id="3"]

[node name="PlayerList" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="NameSearch" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "NAME"
caret_blink = true

[node name="LeagueSelect" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="TeamSelect" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PositionSelect" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="InfoSelect" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Table" parent="VBoxContainer" instance=ExtResource("3")]
layout_mode = 2
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/NameSearch" to="." method="_on_NameSearch_text_changed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/TeamSelect" to="." method="_on_TeamSelect_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/PositionSelect" to="." method="_on_PositionSelect_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/InfoSelect" to="." method="_on_InfoSelect_item_selected"]
[connection signal="info_player" from="VBoxContainer/Table" to="." method="_on_table_info_player"]
[connection signal="select_player" from="VBoxContainer/Table" to="." method="_on_Table_select_player"]
